--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "react-navigation": "^3.2.3",
     "react-redux": "^6.0.0",
     "redux": "^4.0.1",
+    "redux-persist": "^5.6.12",
+    "redux-promise-middleware": "^5.1.1",
     "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
